--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -12,9 +12,8 @@
           <span ng-if="compDetails.cin.length>0"><strong>CIN : </strong>{{compDetails.cin}}<br></span>
           <span ng-if="compDetails.tin.length>0"><strong>TIN : </strong>{{compDetails.tin}}<br></span>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" style="padding: 15px;margin: 10px;float: right;">
           <span class="btn btn-primary pull-right" ng-if="custDetails.chat" ng-click="openChartPopoup(compDetails)">Generate Script</span>
-
         </div>
 
 
