--- a/support/static/ngTemplates/app.knowledgeBase.html
+++ b/support/static/ngTemplates/app.knowledgeBase.html
@@ -11,7 +11,7 @@
           </div> -->
 
           <div class="col-md-3">
-            <div class="btn btn-block" ng-click="addDoc(-1)" style="font-size:18px ;color:white; background:var(--themeMain);{{docForm!=none&&docForm.title.length==0? 'box-shadow: 1px 1px 1px #181818':'' }}">
+            <div class="btn btn-block" ng-click="addDoc(-1)" style="font-size:18px ;color:white;{{docForm!=none&&docForm.title.length==0? 'box-shadow: 1px 1px 1px #181818':'' }}">
               Add Document &nbsp;
               <!-- <i style="padding-top:5px;" class="fa fa-plus fa-md"></i> -->
             </div>
