--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -17,8 +17,8 @@
             <div style="padding:8px" class="col-xs-9">
               <span ><b>My Users</b></span><br>
             </div>
-            <div class="col-xs-3">
-              <button class="btn btn-default" style="background-color:var(--themeMain);color:white;">{{myUsers.length}}</button>
+            <div class="col-xs-3"  style="margin-top:7px">
+              <button class=" btn-default" style="background-color:var(--themeMain);color:white;border-radius:5px;text-align: center;">{{myUsers.length}}</button>
             </div>
           </div>
         </div>
@@ -56,8 +56,8 @@
             <div style="padding:8px" class="col-xs-9">
               <span><b>New Users</b></span><br>
             </div>
-            <div class="col-xs-2">
-              <button class="btn btn-default" style="background-color:var(--themeMain);color:white;">{{newUsers.length}}</button>
+            <div class="col-xs-2" style="margin-top:7px">
+              <button class=" btn-default" style="background-color:var(--themeMain);color:white;border-radius:5px;text-align: center;">{{newUsers.length}}</button>
             </div>
           </div>
         </div>
