--- a/PIM/static/ngTemplates/app.home.settings.html
+++ b/PIM/static/ngTemplates/app.home.settings.html
@@ -1,6 +1,6 @@
 <div class=" bg-white" style="min-height:93vh;position:relative;">
   <breadcrumb></breadcrumb>
-  <div class="container-fluid" style="padding:15px;">
+  <div class="container-fluid">
     <uib-tabset>
       <uib-tab active="searchTabActive">
         <uib-tab-heading>
