--- a/static_shared/ngTemplates/reviewInfo.html
+++ b/static_shared/ngTemplates/reviewInfo.html
@@ -10,6 +10,7 @@
       <img style="width:5rem" ng-if="!msgData[0].user_id" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt="">
       <div class="" style="display:inline-block">
         <!-- <p style="font-size:16px;font-weight:700">{{msgData[0].user_id | getName}}</p> -->
+          <p ng-if="msgData[0].name"><strong>{{msgData[0].name}}</strong></p>
       </div>
     </div>
     <span class="btn btn_gradient" ng-click="showChart()" style="float:right">Change Status</span>
