--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -43,7 +43,7 @@
                        <span ng-if="data[0].statusChat=='started'" style="color:green"><b>{{data[0].statusChat|humanize}}</b></span>
                        <span ng-if="data[0].statusChat=='closed'" style="color:#A40B0B"><b>{{data[0].statusChat|humanize}}</b></span>
                        <span ng-if="data[0].statusChat=='reviewed'" style="color:brown"><b>{{data[0].statusChat|humanize}}</b></span>
-                       <span style="float:right;padding:;opacity:0.6;">
+                       <span style="float:right;margin-left: 2rem;opacity:0.6;">
                          <i ng-if="data[0].typ=='audio'" class="fa fa-phone fa-lg" aria-hidden="true"></i>
                          <i ng-if="data[0].typ=='video'" class="fa fa-video-camera fa-lg" aria-hidden="true"></i>
                        </span>
@@ -114,7 +114,7 @@
             </div>
               <div class="form-group login-input-group">
                 <label><b> Select Date </b></label>
-                <div class="input-group login-input-group">
+                <div class="input-group login-input-group myyy">
                   <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
                   <span class="input-group-btn">
                     <button style="border:none" type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="fa fa-calendar"></i></button>
