--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div ng-if="!sideMenuVisibility" class="row" style="{{mobileView ? ';':';'}};padding:15px;text-align:center">
-    <img ng-src="{{user.pk | getDP}}" class="img img-circle" style="width:50px;float: none;">
+    <img ng-src="{{brandLogo}}" class="img img-circle" style="width:50px;float: none;">
   </div>
   <div class="row" style="{{sideMenuVisibility ? 'border-bottom:solid 2px #eeeeee;':''}}; margin:0px;">
     <div class="container-fluid">
