--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -1,22 +1,22 @@
 <nav class="navbar navbar-default navbar-fixed-top animated slideInDown" id="navbarTop" style="{{sideMenuVisibility ? 'margin-left:13%': 'margin-left:4%;'}};{{mobileView ? 'margin-left:31%':''}}" >
   <div class="container-fluid" style="height:100%;">
     <div class="navbar-header"  style="height: 100%;">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navBar" aria-expanded="false" aria-controls="navbar">
+      <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navBar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
+      </button> -->
 
-      <a ng-click="toggleSideMenu()" class="navbar-brand" style="cursor:pointer;" >
+      <!-- <a ng-click="toggleSideMenu()" class="navbar-brand" style="cursor:pointer;" >
         <i style="margin-top:-10px;" class="fa fa-bars fa-2x"></i>
-      </a>
+      </a> -->
 
       <!-- <a class="navbar-brand" href="/" style="margin-left:50px;">
         <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
       </a> -->
       <a class="navbar-brand" href="/" style="margin-left:5px;padding-top:5px;margin-top:-18px;">
-        <h2>{{brandName}}</h2>
+        <h2 style="color:var(--themeMain)">{{brandName}}</h2>
       </a>
       <div class="navbar-brand" style="margin-right:30px;"></div>
     </div>
