--- a/homepage/static/ngTemplates/app.homepage.courses.html
+++ b/homepage/static/ngTemplates/app.homepage.courses.html
@@ -61,10 +61,12 @@
         <span><b>Video Course</b></span>
         <div ng-class="class2"></div>
       </div>
-      <a href="/exam"><div class="col-md-2 clickchange" ng-class="click3" ng-click="clicks(3)">
-        <span><b>Test Series</b></span>
-        <div ng-class="class3"></div>
-      </div></a>
+      <a href="/exam">
+        <div class="col-md-2 clickchange" ng-class="click3" ng-click="clicks(3)">
+          <span><b>Test Series</b></span>
+          <div ng-class="class3"></div>
+        </div>
+      </a>
       <div class="col-md-2 clickchange" ng-class="click4" ng-click="clicks(4)">
         <span><b>Forum</b></span>
         <div ng-class="class4"></div>
@@ -79,10 +81,21 @@
     <div class="container" style="background-color:#FCC300;min-height:10vh;  position:relative;padding-bottom: 2em;">
       <ng-owl-carousel class="owl-theme" owl-items="items" owl-properties="properties" owl-ready="ready($api)">
         <div ng-repeat="a in items">
-          <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="clicks($index+1)">
-            <span style="font-size:35px;"><b>{{a.head}}</b></span>
-            <div ng-class="a.class2"></div>
+          <div ng-if="$index==2">
+            <a href="/exam">
+              <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="clicks($index+1)">
+                <span style="font-size:35px;"><b>{{a.head}}</b></span>
+                <div ng-class="a.class2"></div>
+              </div>
+            </a>
           </div>
+          <div ng-if="$index==!2">
+            <div class="col-xs-12 clickchange" ng-class="a.class1" ng-click="clicks($index+1)">
+              <span style="font-size:35px;"><b>{{a.head}}</b></span>
+              <div ng-class="a.class2"></div>
+            </div>
+          </div>
+
         </div>
       </ng-owl-carousel>
     </div>
