--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -11,7 +11,7 @@
             </uib-tab-heading>
                 <div class="col-sm-9" style="margin-top:15px">
                   <div style="position: absolute;top:250px;left:35%;" ng-if="loadingData">
-                    <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
+                    <img ng-src="/static/images/spinner.gif" alt="">
                   </div>
                   <div ng-if="!isTableView" class="col-md-4" style="margin-bottom:20px; padding-left:10px;padding-right:10px;" ng-repeat="data in reviewData" ng-click="tableAction($index)">
                     <div class="container-fluid card" style="padding-bottom:0px">
@@ -70,8 +70,7 @@
                        <tr ng-repeat="data in reviewData" style="" ng-click="tableAction(data,true)">
                          <td>
                            <div class="" style="border-radius:50%;width:50px;height:50px;margin:5px 10px;float:left">
-                             <img style="width:50px" src="{{data[0].user_id | getDP}}" alt="">
-                             <img ng-if="!data[0].user_id" style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt="">
+                             <img style="width:5rem" ng-if="data[0].user_id" src="{{data[0].user_id | getDP}}" alt="">
                            </div>
                            <span style="display:inline-block">
                              <div class="">
@@ -167,7 +166,7 @@
               <div class="row">
                 <div class="col-sm-9" style="margin-top:15px">
                   <div style="position: absolute;top:400px;left:35%;" ng-if="loadingDataForArc">
-                    <img src="https://media1.tenor.com/images/db85ba00c6073b451a8f05156a66524e/tenor.gif?itemid=9856796" alt="">
+                    <img ng-src="/static/images/spinner.gif" alt="">
                   </div>
                   <div ng-if="!isTableView" class="col-md-4" style="margin-bottom:10px; padding-left:10px;padding-right:10px;" ng-repeat="data in archivedData " ng-click="tableArchAction($index)">
                     <!-- {{data[0]}} -->
@@ -224,8 +223,8 @@
                        <tr ng-repeat="data in archivedData" style="" ng-click="tableArchAction(data,true)">
                          <td>
                            <div class="" style="border-radius:50%;width:50px;height:50px;margin:5px 10px;float:left">
-                             <img style="width:50px" src="{{data[0].user_id| getDP}}" alt="">
-                             <!-- <img ng-if="data[0].user_id" style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt=""> -->
+                             <img style="width:5rem" ng-if="data[0].user_id" src="{{data[0].user_id | getDP}}" alt="">
+
                            </div>
                            <span style="display:inline-block">
                              <div class="">
