--- a/finance/static/ngTemplates/app.finance.costCenter.item.html
+++ b/finance/static/ngTemplates/app.finance.costCenter.item.html
@@ -1,4 +1,4 @@
-<div class="col-md-5 card" style="padding-top:10px;" ng-controller="businessManagement.finance.expenses.item">
+<div class="col-md-5 card" style="padding-top:10px;" ng-controller="businessManagement.finance.expenseClaims.item">
   <div class="row">
     <div class="col-md-2">
       <img ng-src="{{data.head | getDP}}" class="img-circle pull-right" width="50"/>
