--- a/finance/static/ngTemplates/app.finance.expenseSheet.explore.html
+++ b/finance/static/ngTemplates/app.finance.expenseSheet.explore.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" ng-controller="businessManagement.finance.expenses.explore">
+<div class="container-fluid" ng-controller="businessManagement.finance.expenseClaims.explore">
   <div class="col-md-4">
 
     <h3>Invocies</h3>
