--- a/finance/static/ngTemplates/app.finance.expenseSheet.item.html
+++ b/finance/static/ngTemplates/app.finance.expenseSheet.item.html
@@ -1,5 +1,5 @@
 
-<div class="col-md-4" style="padding-bottom:10px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.finance.expenses.item">
+<div class="col-md-4" style="padding-bottom:10px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.finance.expenseClaims.item">
   <div class="container-fluid card" style="padding:30px;padding-top:0px;">
     <div class="row">
       <div class="row">
