--- a/projectManagement/static/ngTemplates/projectManagement.dash.html
+++ b/projectManagement/static/ngTemplates/projectManagement.dash.html
@@ -1,6 +1,5 @@
-<div class="" style="height:93vh;position:relative;">
-  <div class="container-fluid" style="padding:20px;">
-    <breadcrumb></breadcrumb>
+<div style="height:93vh;position:relative;">
+  <breadcrumb></breadcrumb>
     <div class="container-fluid">
       <div class="col-md-12">
         <div class="col-md-6">
@@ -34,5 +33,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
