--- a/PIM/static/ngTemplates/app.home.myWork.html
+++ b/PIM/static/ngTemplates/app.home.myWork.html
@@ -117,7 +117,7 @@
 
       </div>
     </div>
-    <div class="col-md-3" style="position:absolute; height:100%;right:0px">
+    <div class="col-md-3" style="position:absolute;right:0px">
 
       <div class="row text-center">
         <h3 class="text-muted">{{dates[selectIndex] | date : 'dd MMM yyyy'}}</h3>
