--- a/finance/static/ngTemplates/app.finance.expenses.form.html
+++ b/finance/static/ngTemplates/app.finance.expenses.form.html
@@ -1,4 +1,4 @@
-<div ng-controller="businessManagement.finance.expenses.form">
+<div ng-controller="businessManagement.finance.expenseClaims.form">
   <div class="container-fluid">
     <div class="col-md-1">
     </div>
