--- a/finance/static/ngTemplates/app.finance.vendor.item.html
+++ b/finance/static/ngTemplates/app.finance.vendor.item.html
@@ -1,4 +1,4 @@
-<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.finance.vendor.item">
+<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.finance.vendor.item" ng-click="rowActionClicked('invoiceDetails')">
   <div class="container-fluid card" style="padding-bottom:10px; padding-top:10px;">
     <div class="row" style="border-bottom: 1px solid #dedede;">
       <div class="col-md-12" style="position:relative;display:block;">
@@ -16,17 +16,12 @@
       <div class="col-md-2">
         <div style="padding-right:20px;">
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('edit')">
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('edit');$event.stopPropagation();">
               <i class="fa fa-pencil fa-lg" style="margin-top:0px;"></i>
             </span>
           </div>
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('invoiceDetails')">
-              <span><i class="fa fa-archive fa-lg" style="margin-top:15px;"></i></span>
-            </span>
-          </div>
-          <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('details')">
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('details');$event.stopPropagation();">
               <i class="fa fa-info-circle fa-lg" style="margin-top:15px;"></i>
             </span>
           </div>
